<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/task_list_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="New task"
        android:hint="@string/hint_enter_task_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/button_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button_add_task"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_show_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/accent"
        android:text="@string/button_show_tasks"
        android:textColor="#4E342E" />

    <Button
        android:id="@+id/button_show_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/accent"
        android:text="@string/button_show_completed"
        android:textColor="#4E342E" />

    <Button
        android:id="@+id/button_complete_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button_complete_task"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_remove_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button_remove_task"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_print_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/accent"
        android:text="@string/button_print_tasks"
        android:textColor="#4E342E" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:background="@android:color/white" />
</LinearLayout>
